git-gerrit.1: fix silly mistake "pull: an alias for pull"

--- a/git-gerrit.1
+++ b/git-gerrit.1
@@ -81,7 +81,7 @@ Showing in\-depth information about certain patches, without needing to open a b
 .IP "" 0
 .
 .SH "COMMANDS"
-If no command is given, \fBgit gerrit review\fR is the default action\.
+If no command is given, \fBgit\-gerrit review\fR is the default action\.
 .
 .TP
 \fBreview\fR [branch:\fIproject branch\fR] [topic:\fIpatch topic\fR] [type:\fIreview|draft\fR]
@@ -103,7 +103,7 @@ Fetches all patches given as arguments from Gerrit, and then applies them to you
 .
 .TP
 \fBpull\fR
-An alias for \fBpull\fR\.
+An alias for \fBget\fR\.
 .
 .TP
 \fB\-2\fR, \fB\-1\fR, \fB0\fR, \fB+1\fR, \fB+2\fR \fIpatches\fR
